--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-streamlit==1.28.1
-pandas==2.0.3
-numpy==1.24.3
-scikit-learn==1.3.0
-joblib==1.3.2
-plotly==5.15.0
-Sastrawi==1.0.1
-nltk==3.8.1
-requests==2.31.0
+streamlit>=1.32.0
+pandas>=2.1.0
+numpy>=1.26.0
+textblob>=0.17.1
+vaderSentiment>=3.3.2
+plotly>=5.15.0
